[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/theme/default.tres" type="Theme" id=1]
[ext_resource path="res://src/Menu/menu_entry.gd" type="Script" id=2]
[ext_resource path="res://src/cutscene/translate.tscn" type="PackedScene" id=3]

[node name="menu_entry" type="CenterContainer"]
margin_left = 80.0
margin_right = 80.0
margin_bottom = 8.0
script = ExtResource( 2 )

[node name="menu_entry" type="HBoxContainer" parent="."]
margin_right = 56.0
margin_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 0
alignment = 1

[node name="left_arrow" type="Label" parent="menu_entry"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_right = 8.0
margin_bottom = 8.0
theme = ExtResource( 1 )
text = ">"

[node name="label" type="Label" parent="menu_entry"]
unique_name_in_owner = true
margin_left = 8.0
margin_right = 48.0
margin_bottom = 8.0
theme = ExtResource( 1 )
text = "entry"
align = 1
valign = 1

[node name="right_arrow" type="Label" parent="menu_entry"]
unique_name_in_owner = true
modulate = Color( 1, 1, 1, 0 )
margin_left = 48.0
margin_right = 56.0
margin_bottom = 8.0
theme = ExtResource( 1 )
text = "<"

[node name="translate" parent="." instance=ExtResource( 3 )]

[connection signal="focus_entered" from="." to="." method="_on_menu_entry_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_menu_entry_focus_exited"]
